# fast-api-project

./: .env.docker  .env.local  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  start_server.sh
.github/workflows/: python-app.yml
migrations/: env.py
src/: config.py  main.py
src/controllers/: __init__.py  auth.py  board.py  comments.py  users.py
src/models/: __init__.py  board.py  comments.py  users.py
src/modules/: cache.py  database.py  exceptions.py  pagination.py  utils.py
src/services/: admin.py  auth.py  board.py  comments.py  request.py  users.py
tests/e2e/: test_auth.py
