[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Hyeong Joon Jeon <hope2114.jsj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
brotli-asgi = "^1.4.0"
pydantic-settings = "^2.3.4"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
user-agents = "^2.2.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"
bcrypt = "^4.2.0"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
testcontainers = "^4.8.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
